--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^2.0.4",
     "pug": "^3.0.0",
     "sequelize": "^6.3.3",
+    "sequelize-cli": "^6.2.0",
     "sqlite3": "^5.0.0"
   }
 }
