--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sql_library_manager-v1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "http-errors": "^1.8.0",
     "nodemon": "^2.0.4",
     "pug": "^3.0.0",
     "sequelize": "^6.3.3",
